2012-05-15  James Robinson  <jamesr@chromium.org>

        [chromium] Move createOffscreenGraphicsContext3D() from WebKitPlatformSupport to Platform
        https://bugs.webkit.org/show_bug.cgi?id=86524

        Reviewed by Adam Barth.

        Moves createOffscreenGraphicsContext3D(), previously on WebKitPlatformSupport, to WebKit::Platform.

        * chromium/public/Platform.h:
        (Platform):
        (WebKit::Platform::createOffscreenGraphicsContext3D):

2012-05-14  Gavin Peters  <gavinp@chromium.org>

        Add Prerenderer, PrerenderHandle and a chromium interface for Prerendering.
        https://bugs.webkit.org/show_bug.cgi?id=85005

        Reviewed by Adam Barth.

        * Platform.gypi:
        * chromium/public/WebPrerender.h:
        (WebKit::WebPrerender::referrer):
        (WebCore):
        (WebPrerender):
        * chromium/public/WebPrerenderingSupport.h:
        (WebKit):
        (WebPrerenderingSupport):
        * chromium/public/WebURLRequest.h:
        * chromium/src/WebPrerenderingSupport.cpp: Added.
        (WebKit):
        (WebKit::WebPrerenderingSupport::initialize):
        (WebKit::WebPrerenderingSupport::shutdown):
        (WebKit::WebPrerenderingSupport::current):

2012-05-12  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r116812.
        http://trac.webkit.org/changeset/116812
        https://bugs.webkit.org/show_bug.cgi?id=86313

        Appears to be causing a top crash (Requested by abarth on
        #webkit).

        * Platform.gypi:
        * chromium/public/Platform.h:
        (WebKit):
        * chromium/public/WebStorageArea.h: Removed.
        * chromium/public/WebStorageNamespace.h: Removed.

2012-05-11  Shawn Singh  <shawnsingh@chromium.org>

        [chromium] Plumb --show-paint-rects to accelerated compositor
        https://bugs.webkit.org/show_bug.cgi?id=86255

        Reviewed by James Robinson.

        * chromium/public/WebLayerTreeView.h: