@@ -1,5 +1,16 @@
 2012-05-15  James Robinson  <jamesr@chromium.org>
 
+        [chromium] Remove WEBKIT_USING_(SKIA|CG) #defines
+        https://bugs.webkit.org/show_bug.cgi?id=86536
+
+        Reviewed by Adam Barth.
+
+        The Chromium port always using Skia, so WEBKIT_USING_CG has been dead code for many moons.
+
+        * chromium/public/WebCommon.h:
+
+2012-05-15  James Robinson  <jamesr@chromium.org>
+
         [chromium] Move createOffscreenGraphicsContext3D() from WebKitPlatformSupport to Platform
         https://bugs.webkit.org/show_bug.cgi?id=86524
 
